[2818653] Password expiry interval now exported to XML correctly in decimal
and show current expiry interval during Edit, if present.
[2813295] 'Browse + Autotype' system tray menu items fixed - thanks to
Vasily for reporting and sending the patches for this.
[2085058] Old (1.x) format databases now closed correctly.
[] Fix crash error using External Editor on Notes field.

New Features for 3.18
=====================
[] Add minidump support for release builds so that we can try to solve
issues with more information than Windows normally provides.

New Features for 3.18
=====================
[2793283] Allow entry to override doubleclick setting.
[2793280] Browse+Autotype added to configurable double click actions.
[] Implement Virtual Keyboards for multilingual passphrase entry.
[] DragBar now has ToolTips to inform user of its use.
[] User can close the currently open database via the System Tray
menu.
[] Improved Merge reporting.

Changes to Existing Features in 3.18
====================================
[] New toolbar icon set has been replaced with icons based on famfamfam's
silk set.
[] Reworked Add and Edit dialogs into Property Pages.

Bugs fixed in 3.18
==================
[2795428] Browse+ on Toolbar now inactive if no URL present
[2795427] Duplicate of "Display Subset of Password" removed from Context
Menu (right-click on entry).
[2789873] Status bar now updated properly after Browse to URL and other
actions that copied data to the clipboard.
[2782413] No longer crashes when loading 0302 formatted headers (from
~v3.08).
[2779705] Reserved shortcuts (Ctrl+Q, Alt+F4 and F1) now work.
[] Run Command now correctly copied via Drag & Drop.
[] Allow all fields to be selected for Compare function.
[] Fixed crash if renaming an entry to one that already exists.

Bugs fixed in 3.17
==================
[2750090] Using SaveAs now unlocks original database on successful
completion of the save.
[2689144] PWS no longer goes into a loop if the main menu has not yet